--- a/app/src/main/res/layout/browser.xml
+++ b/app/src/main/res/layout/browser.xml
@@ -1,11 +1,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="#000000"
     android:orientation="vertical"
     android:windowSoftInputMode="adjustPan"
-    android:paddingTop="5dp" >
+    android:paddingTop="5dp">
 
     <ListView
         android:id="@+id/filelist"
@@ -18,7 +17,6 @@
         android:choiceMode="singleChoice"
         android:fastScrollAlwaysVisible="true"
         android:fastScrollEnabled="true"
-        android:listSelector="#660000" >
-    </ListView>
+        android:listSelector="#660000"></ListView>
 
 </LinearLayout>
