--- a/app/src/main/res/layout/nowplaying.xml
+++ b/app/src/main/res/layout/nowplaying.xml
@@ -6,7 +6,7 @@
     android:focusableInTouchMode="false"
     android:orientation="vertical"
     android:gravity="center"
-    android:windowSoftInputMode="adjustPan" >
+    android:windowSoftInputMode="adjustPan">
 
     <LinearLayout
         android:id="@+id/nowPlaying"
@@ -15,7 +15,7 @@
         android:clickable="true"
         android:focusable="false"
         android:focusableInTouchMode="false"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/currentTitle"
@@ -43,7 +43,6 @@
         android:layout_height="100dp"
         android:clickable="false"
         android:focusable="false"
-        android:focusableInTouchMode="false" >
-    </FrameLayout>
+        android:focusableInTouchMode="false"></FrameLayout>
 
 </LinearLayout>
