--- a/app/src/main/res/layout/playlist.xml
+++ b/app/src/main/res/layout/playlist.xml
@@ -1,11 +1,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000"
     android:orientation="vertical"
     android:paddingTop="5dp"
-    android:windowSoftInputMode="adjustPan" >
+    android:windowSoftInputMode="adjustPan">
 
     <ListView
         android:id="@+id/song_list"
@@ -17,7 +16,6 @@
         android:fastScrollEnabled="true"
         android:focusable="false"
         android:focusableInTouchMode="false"
-        android:listSelector="#660000" >
-    </ListView>
+        android:listSelector="#660000"></ListView>
 
 </LinearLayout>
