--- a/app/src/main/res/menu/queue.xml
+++ b/app/src/main/res/menu/queue.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/action_exit"
-        android:icon="@drawable/opendoorwhite40"
+        android:icon="@drawable/whitex"
         android:orderInCategory="4"
         android:title="@string/Exit"
         zezo:showAsAction="always" />
