bugfix song click on now playing crash resized context button  changed delete confirm message

--- a/app/src/main/res/layout/song.xml
+++ b/app/src/main/res/layout/song.xml
@@ -10,8 +10,8 @@
 
     <ImageView
         android:id="@+id/DragHandleImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_gravity="center_vertical"
         android:clickable="false"
         android:focusable="false"
@@ -37,7 +37,7 @@
             android:focusable="false"
             android:focusableInTouchMode="false"
             android:textColor="@drawable/list_item_text_selector"
-            android:textSize="18sp"
+            android:textSize="24sp"
             android:textStyle="bold" />
 
         <LinearLayout
@@ -59,19 +59,19 @@
                 android:focusable="false"
                 android:focusableInTouchMode="false"
                 android:textColor="@drawable/list_item_text_selector"
-                android:textSize="14sp" />
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/songDuration"
                 android:layout_width="match_parent"
-                android:gravity="right"
+                android:gravity="bottom|right"
                 android:layout_height="fill_parent"
                 android:background="@drawable/list_item_background_selector"
                 android:clickable="false"
                 android:focusable="false"
                 android:focusableInTouchMode="false"
                 android:textColor="@drawable/list_item_text_selector"
-                android:textSize="10sp"
+                android:textSize="16sp"
                 android:paddingRight="5dp" />
         </LinearLayout>
     </LinearLayout>
