--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,9 @@
             android:background="#000"
             android:paddingBottom="5dp"
             android:paddingTop="5dp"
-            android:textColor="#fff" />
+            android:textColor="#fff"
+            android:textSize="@dimen/textSizeBig"
+            />
     </android.support.v4.view.ViewPager>
 
 </RelativeLayout>
