--- a/app/src/main/res/layout/nowplaying.xml
+++ b/app/src/main/res/layout/nowplaying.xml
@@ -24,7 +24,7 @@
             android:focusable="false"
             android:focusableInTouchMode="false"
             android:textColor="@color/white"
-            android:textSize="16sp"
+            android:textSize="@dimen/textSizeBig"
             android:textStyle="bold" />
 
         <TextView
@@ -34,7 +34,7 @@
             android:focusable="false"
             android:focusableInTouchMode="false"
             android:textColor="@color/gray"
-            android:textSize="14sp" />
+            android:textSize="@dimen/textSizeMedium" />
     </LinearLayout>
 
     <FrameLayout
