--- a/app/src/main/res/layout/song.xml
+++ b/app/src/main/res/layout/song.xml
@@ -16,7 +16,7 @@
         android:clickable="false"
         android:focusable="false"
         android:focusableInTouchMode="false"
-        android:onClick="onOpenContextMenu"
+        android:onClick="onContextMenuButtonClicked"
         android:src="@drawable/menuwhite40"></ImageView>
 
     <LinearLayout
