--- a/app/src/main/res/layout/song.xml
+++ b/app/src/main/res/layout/song.xml
@@ -33,12 +33,10 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/list_item_background_selector"
-            android:clickable="false"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
             android:textColor="@drawable/list_item_text_selector"
             android:textSize="@dimen/textSizeBig"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:singleLine="true"/>
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -56,10 +54,14 @@
                 android:layout_height="fill_parent"
                 android:background="@drawable/list_item_background_selector"
                 android:clickable="false"
-                android:focusable="false"
-                android:focusableInTouchMode="false"
                 android:textColor="@drawable/list_item_text_selector"
-                android:textSize="@dimen/textSizeMedium" />
+                android:textSize="@dimen/textSizeMedium"
+                android:scrollHorizontally="true"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:singleLine="true"
+                android:ellipsize="marquee"
+                android:marqueeRepeatLimit ="marquee_forever"/>
 
             <TextView
                 android:id="@+id/songDuration"
