--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
             android:paddingBottom="5dp"
             android:paddingTop="5dp"
             android:textColor="#fff"
-            android:textSize="@dimen/textSizeBig"
+            android:textSize="?attr/font_medium"
             />
     </android.support.v4.view.ViewPager>
 
