--- a/app/src/main/res/layout/file.xml
+++ b/app/src/main/res/layout/file.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@drawable/list_item_text_selector"
-        android:textSize="@dimen/textSizeBig"
+        android:textSize="?attr/font_large"
         android:textStyle="bold" />
 
 </LinearLayout>
