--- a/app/src/main/res/layout/folders.xml
+++ b/app/src/main/res/layout/folders.xml
@@ -10,7 +10,7 @@
         android:id="@+id/currentPath"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:textSize="@dimen/textSizeSmall" />
+        android:textSize="?attr/font_small" />
 
     <ListView
         android:id="@+id/filelist"
