--- a/app/src/main/res/layout/nowplaying.xml
+++ b/app/src/main/res/layout/nowplaying.xml
@@ -22,7 +22,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
-            android:textSize="@dimen/textSizeBig"
+            android:textSize="?attr/font_large"
             android:textStyle="bold"
             android:singleLine="true"
             android:scrollHorizontally="true"
@@ -36,7 +36,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/gray"
-            android:textSize="@dimen/textSizeMedium"
+            android:textSize="?attr/font_medium"
             android:singleLine="true"
             android:scrollHorizontally="true"
             android:focusable="true"
