--- a/app/src/main/res/layout/song.xml
+++ b/app/src/main/res/layout/song.xml
@@ -34,7 +34,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/list_item_background_selector"
             android:textColor="@drawable/list_item_text_selector"
-            android:textSize="@dimen/textSizeBig"
+            android:textSize="?attr/font_large"
             android:textStyle="bold"
             android:singleLine="true"/>
 
@@ -55,7 +55,7 @@
                 android:background="@drawable/list_item_background_selector"
                 android:clickable="false"
                 android:textColor="@drawable/list_item_text_selector"
-                android:textSize="@dimen/textSizeMedium"
+                android:textSize="?attr/font_medium"
                 android:scrollHorizontally="true"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
@@ -73,7 +73,7 @@
                 android:focusable="false"
                 android:focusableInTouchMode="false"
                 android:textColor="@drawable/list_item_text_selector"
-                android:textSize="@dimen/textSizeSmall"
+                android:textSize="?attr/font_small"
                 android:paddingRight="5dp" />
         </LinearLayout>
     </LinearLayout>
