--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -3,9 +3,9 @@
     android:background="#000000">
 
     <com.zezo.music.tabs.settings.FontSizeListPreference
-        android:key="FONT_SIZE"
-        android:title="Font Size"
-        android:dialogTitle="Choose A Font Size"
-        android:summary="Select a font size."/>
+        android:key="FONT_STYLE"
+        android:title="Font Style"
+        android:dialogTitle="Choose A Font Style"
+        android:summary="Select a font style."/>
 
 </PreferenceScreen>
