--- a/app/src/main/res/layout/file.xml
+++ b/app/src/main/res/layout/file.xml
@@ -9,11 +9,11 @@
     android:padding="5dp">
 
     <TextView
+        style="@style/Label.Large"
         android:id="@+id/filename"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@drawable/list_item_text_selector"
-        android:textSize="?attr/font_large"
         android:textStyle="bold" />
 
 </LinearLayout>
