style fix and re-format code

--- a/app/src/main/res/layout/queue.xml
+++ b/app/src/main/res/layout/queue.xml
@@ -16,7 +16,6 @@
         android:fastScrollEnabled="true"
         android:focusable="false"
         android:focusableInTouchMode="false"
-        android:listSelector="#660000">
-    </ListView>
+        android:listSelector="#660000"></ListView>
 
 </LinearLayout>
