--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content">
 
         <android.support.v4.view.PagerTabStrip
+            style="@style/FontStyle.Medium"
             android:id="@+id/pager_title_strip"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -17,9 +18,7 @@
             android:background="#000"
             android:paddingBottom="5dp"
             android:paddingTop="5dp"
-            android:textColor="#fff"
-            android:textSize="?attr/font_medium"
-            />
+            android:textColor="#fff"/>
     </android.support.v4.view.ViewPager>
 
 </RelativeLayout>
