--- a/app/src/main/res/layout/song.xml
+++ b/app/src/main/res/layout/song.xml
@@ -36,7 +36,10 @@
             android:background="@drawable/list_item_background_selector"
             android:textColor="@drawable/list_item_text_selector"
             android:textStyle="bold"
-            android:singleLine="true"/>
+            android:singleLine="true"
+            android:clickable="false"
+            android:focusable="false"
+            android:focusableInTouchMode="false"/>
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -53,15 +56,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:background="@drawable/list_item_background_selector"
-                android:clickable="false"
                 android:textColor="@drawable/list_item_text_selector"
                 android:textSize="?attr/font_medium"
-                android:scrollHorizontally="true"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
                 android:singleLine="true"
-                android:ellipsize="marquee"
-                android:marqueeRepeatLimit ="marquee_forever"/>
+                android:clickable="false"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                />
 
             <TextView
                 android:id="@+id/songDuration"
