default setting for font style

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -6,6 +6,7 @@
         android:key="FONT_STYLE"
         android:title="Font Style"
         android:dialogTitle="Choose A Font Style"
-        android:summary="Select a font style." />
+        android:summary="Select a font style."
+        android:defaultValue="Medium" />
 
 </PreferenceScreen>
