--- a/app/src/main/res/layout/playlist.xml
+++ b/app/src/main/res/layout/playlist.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000"
@@ -18,4 +18,19 @@
         android:focusableInTouchMode="false"
         android:listSelector="#660000"></ListView>
 
-</LinearLayout>
+    <ImageButton
+        android:id="@+id/nowPlayingToggle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#00FFFFFF"
+        android:src="@drawable/arrowsdown"
+        android:layout_alignParentBottom="true" />
+
+    <fragment
+        android:id="@+id/nowplaying"
+        android:name="com.zezo.music.NowPlayingFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true" />
+
+</RelativeLayout>
