--- a/app/src/main/res/layout/playlistbottompane.xml
+++ b/app/src/main/res/layout/playlistbottompane.xml
@@ -1,42 +1,22 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayoutLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:background="#000000"
     android:orientation="vertical"
-    android:windowSoftInputMode="adjustPan" >
+    android:windowSoftInputMode="adjustPan">
 
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:background="@color/White" />
 
-    <TextView
-        android:id="@+id/currentTitle"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        android:onClick="scrollToCurrent"
-        android:textColor="@color/white"
-        android:textSize="16sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/currentArtist"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        android:onClick="scrollToCurrent"
-        android:textColor="@color/gray"
-        android:textSize="14sp" />
-
     <FrameLayout
         android:id="@+id/controllerFrame"
         android:layout_width="fill_parent"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         android:clickable="false"
         android:focusable="false"
         android:focusableInTouchMode="false"
-        android:windowSoftInputMode="stateHidden" >
-    </FrameLayout>
+        android:windowSoftInputMode="stateHidden"></FrameLayout>
 
-</LinearLayout>
+</RelativeLayoutLayout>
