--- a/app/src/main/res/layout/playlist.xml
+++ b/app/src/main/res/layout/playlist.xml
@@ -24,7 +24,7 @@
             android:fastScrollEnabled="true"
             android:focusable="false"
             android:focusableInTouchMode="false"
-            android:listSelector="#660000"/>
+            android:listSelector="#660000" />
 
         <ImageButton
             android:id="@+id/nowPlayingToggle"
@@ -32,13 +32,13 @@
             android:layout_height="wrap_content"
             android:background="#00FFFFFF"
             android:src="@drawable/arrowsdown"
-            android:layout_alignParentBottom="true"/>
+            android:layout_alignParentBottom="true" />
 
     </RelativeLayout>
 
     <fragment
         android:id="@+id/playlistBottomPane"
-        android:name="com.zezo.music.tabs.playlist.PlaylistBottomPaneFragment"
+        android:name="com.zezo.music.tabs.playlist.MediaControllerFragment"
         android:layout_width="match_parent"
         android:layout_height="90dip"
         android:layout_alignParentBottom="true" />
