--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,16 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/relativeLayout"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_alignParentTop="true">
+    android:layout_alignParentTop="true"
+    android:orientation="vertical"
+    >
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp"
+        android:layout_weight="1" >
 
         <android.support.v4.view.PagerTabStrip
             style="@style/FontStyle.Medium"
@@ -21,4 +24,21 @@
             android:textColor="#fff" />
     </android.support.v4.view.ViewPager>
 
-</RelativeLayout>
+    <ImageButton
+        android:id="@+id/mediaControllerToggle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#00FFFFFF"
+        android:src="@drawable/arrowsdown"
+        android:layout_above="@+id/mediaController"
+
+        />
+
+    <fragment
+        android:id="@+id/mediaController"
+        android:name="com.zezo.music.shared.MediaControllerFragment"
+        android:layout_width="match_parent"
+        android:layout_height="90dip"
+        android:layout_alignParentBottom="true" />
+
+</LinearLayout>
