--- a/app/src/main/res/menu/queue.xml
+++ b/app/src/main/res/menu/queue.xml
@@ -1,11 +1,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:zezo="http://schemas.android.com/apk/res-auto">
+    xmlns:ayco="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/action_exit"
         android:icon="@drawable/whitex"
         android:orderInCategory="4"
         android:title="@string/Exit"
-        zezo:showAsAction="always" />
+        ayco:showAsAction="always" />
 
 </menu>
