--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <com.zezo.music.tabs.settings.FontSizeListPreference
+    <com.ayco.player.tabs.settings.FontSizeListPreference
         style="@style/Label.Large"
         android:key="FONT_STYLE"
         android:title="Font Style"
