--- a/app/src/main/res/menu/folders.xml
+++ b/app/src/main/res/menu/folders.xml
@@ -1,18 +1,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:ayco="http://schemas.android.com/apk/res-auto">
+    xmlns:zezo="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/action_set_folder"
         android:icon="@drawable/folderwhite40"
         android:orderInCategory="1"
         android:title="@string/SetFolder"
-        ayco:showAsAction="always" />
+        zezo:showAsAction="always" />
 
     <item
         android:id="@+id/action_exit"
         android:icon="@drawable/whitex"
         android:orderInCategory="4"
         android:title="@string/Exit"
-        ayco:showAsAction="always" />
+        zezo:showAsAction="always" />
 
 </menu>
